[gd_scene load_steps=2 format=3 uid="uid://de3b1h5s204wm"]

[ext_resource type="Script" path="res://src/scripts/levelEditor/inspector_item.gd" id="1_60ra8"]

[node name="InspectorItem" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = -927.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60ra8")

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Element Name"

[node name="PropContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
